--- a/JoJoStand/JoJoStand/Main/Base.lproj/Main.storyboard
+++ b/JoJoStand/JoJoStand/Main/Base.lproj/Main.storyboard
@@ -67,9 +67,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oSJ-46-Xyp">
-                                <rect key="frame" x="69" y="784" width="46" height="30"/>
+                                <rect key="frame" x="68" y="784" width="49" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Draw It"/>
                                 <connections>
                                     <action selector="drawIt:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dUB-Zr-tVt"/>
                                 </connections>
@@ -78,6 +78,14 @@
                                 <rect key="frame" x="206" y="529" width="182" height="190"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2AH-sm-Fza">
+                                <rect key="frame" x="264" y="784" width="66" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Change it"/>
+                                <connections>
+                                    <segue destination="Zwd-o2-qq8" kind="show" identifier="Transform" id="2Wc-Il-ieg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -92,6 +100,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+        </scene>
+        <!--Transform-->
+        <scene sceneID="hZs-cg-96k">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Transform" id="Zwd-o2-qq8" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="kjK-rW-cUX"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VMG-jz-hxf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="807" y="138"/>
         </scene>
     </scenes>
 </document>
